# No42_work_bi_PythonAll

./: .cursorignore  CLAUDE.md  Dockerfile.dev  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: napkin.md
.claude/plans/: temporal-chasing-bird.md
.cursor/rules/: napkin.mdc
.reports/: codemap-diff.txt
assets/: 00-reset.css  01-typography.css  02-layout.css  03-components.css  05-charts.css  06-login.css
backend/config/: README.md  domo_datasets.yaml
backend/etl/: etl_domo.py
backend/scripts/: load_domo.py
codemaps/: architecture.md  backend.md  data.md  frontend.md
docs/: CONTRIB.md  RUNBOOK.md  tech-spec.md
docs/CODEMAPS/: frontend.md
src/: exceptions.py
src/charts/: __init__.py  plotly_theme.py  templates.py
src/components/: cards.py  filters.py
src/core/: logging.py
src/data/: config.py  csv_parser.py  data_loader.py  data_source_registry.py  dataset_summarizer.py  models.py  parquet_reader.py  type_inferrer.py
src/pages/: apac_dot_due_date.py
src/pages/apac_dot_due_date/: _callbacks.py  _constants.py  _data_loader.py  _filters.py  _layout.py  data_sources.yml
src/pages/cursor_usage/: _callbacks.py  _constants.py  _layout.py  data_sources.yml
src/pages/hamm_overview/: __init__.py  _callbacks.py  _constants.py  _data_loader.py  _layout.py  data_sources.yml
src/utils/: __init__.py  data_helpers.py  filter_helpers.py
tests/: conftest.py
tests/unit/data/: test_common_data_loader.py  test_data_source_registry.py
tests/unit/pages/: test_apac_dot_due_date.py
tests/unit/utils/: __init__.py  (+2 more)
(+9 files in other folders)
